updated homepage spacing issues between desktop and mobile

--- a/wp-content/themes/skeleton-theme/assets/styles/screen_small.css
+++ b/wp-content/themes/skeleton-theme/assets/styles/screen_small.css
@@ -102,6 +102,7 @@ img {
 
 .nav > li {
     display: block;
+    border-top: 1px solid #458ea9;
 }
 
 /* ---------------------------------------------------------------------
@@ -139,11 +140,15 @@ img {
 ------------------------------------------------------------------------ */
 
 .grid-site {
-    padding: 20px 0 40px 0;
+    padding: 20px 0 20px 0;
 }
 
 .hennepin-county {
     margin: 0 auto;
+}
+
+.hero-img-home {
+    background-image: none;
 }
 
 .mobile-none {
@@ -162,3 +167,23 @@ img {
     margin-top: 25px;
 }
 
+.section-wrap-img {
+    padding: 0 10px;
+}
+
+.section-quote {
+    margin-top: 30px;
+}
+
+.section-quote-bd {
+    padding: 0 65px;
+    margin-bottom: 15px;
+}
+
+.section-quote-bd:before {
+    left: 0;
+}
+
+.section-quote-ft {
+    padding: 0 50px;
+}
